set NODE_ENV for production environment

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "build": "./node_modules/.bin/webpack --env.production",
+    "build": "./node_modules/.bin/webpack --env.NODE_ENV=production --env.production",
     "watch": "./node_modules/.bin/webpack-dev-server --hot --progress --colors --env.development --history-api-fallback"
   },
   "dependencies": {},
